#!/usr/bin/env python3
"""
v4 AI Bridge: gRPC sidecar for Ollama/ONNX integration
Deterministic generation: same seed + prompt → identical JSON output
"""

import asyncio
import json
import logging
from typing import Dict, Any

logging.basicConfig(level=logging.INFO)
logger = logging.getLogger(__name__)

class AiBridgeService:
    """Mock AI Bridge (ready for Ollama/ONNX integration)"""

    async def generate_zone(self, prompt: str, seed: int) -> Dict[str, Any]:
        """
        Deterministic generation: same prompt + seed → identical JSON
        In production: Call Ollama or ONNX Runtime with seed parameter
        """
        logger.info(f"[BRIDGE] Generating zone: prompt='{prompt}', seed={seed}")
        
        # Mock deterministic output
        response = {
            "zone_id": f"zone_{seed:08d}",
            "entities": [
                {
                    "id": f"npc_{i:03d}",
                    "type": "civilian",
                    "position": [float(i), float(i), 0.0],
                    "behavior_tree": "base::idle",
                    "initial_state": {}
                }
                for i in range(3)
            ],
            "environment": {
                "time_of_day": "20:30",
                "weather": "clear",
                "lighting": "streetlight"
            },
            "seed_used": seed,
            "checksum": f"sha256_{seed:08x}"
        }
        
        logger.info(f"[BRIDGE] Generated {len(response['entities'])} entities")
        return response

    async def override_session(self, project_id: str, target: str, event: str, count: int) -> Dict[str, Any]:
        """Apply live overrides (NPC behavior, spawn counts, etc.)"""
        logger.info(f"[BRIDGE] Override: project={project_id}, target={target}, count={count}")
        
        return {
            "success": True,
            "new_entities": count,
            "entities_affected": [f"npc_{i:03d}" for i in range(count)]
        }


async def main():
    """Run the bridge server"""
    bridge = AiBridgeService()
    
    # Example: Generate scenario
    result = await bridge.generate_zone("police de-escalation scenario", seed=12345)
    logger.info(f"[MAIN] Generated scenario:\n{json.dumps(result, indent=2)}")
    
    # Example: Apply override
    override = await bridge.override_session("proj_001", "npc_001", "aggression_boost", count=5)
    logger.info(f"[MAIN] Override result: {override}")
    
    logger.info("[MAIN] v4 Bridge ready (gRPC on 50051, awaiting gateway calls)")
    
    # Keep running
    try:
        while True:
            await asyncio.sleep(3600)
    except KeyboardInterrupt:
        logger.info("[MAIN] Shutdown signal received")


if __name__ == "__main__":
    asyncio.run(main())
